# lib-version

./: README.md  pyproject.toml  version.py
.github/workflows/: python-package.yml
src/lib_version/: __init__.py  version.py
src/lib_version_group3/: __init__.py  version.py
tests/: test_version.py
