[tool.poetry]
name = "lib_version_group3"
version = "0.1.0"
description = ""
authors = ["smtan <tan.stevenmitchell@gmail.com>"]
license = "MIT License"
readme = "README.md"
package-mode = true

[tool.poetry.dependencies]
python = ">=3.8,<3.13"
pylint = "3.1.0"
gdown = "^5.1.0"

[tool.poetry.group.dev.dependencies]
flake8 = "5.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
