[tool.poetry]
name = "lib_version_group3"
version = "0.1.1"
description = "A Python library for managing and retrieving the software version."
authors = ["smtan <tan.stevenmitchell@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = true

[tool.poetry.dependencies]
python = ">=3.8,<3.13"

[tool.poetry.group.dev.dependencies]
pylint = "3.1.0"
flake8 = "5.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
